# TIDE

./: .gitignore  ENGINEERING.md  README.md  SCIENCE.md  pyproject.toml
scripts/: mosaic_gee_tiles.py  stack_treecover.py
src/tide/: cli.py  config.py  pipeline.py  types.py
src/tide/data/: alignment.py  chunking.py  dem.py  mask.py  mtbs.py  rap.py  seed_distance.py  spei.py
src/tide/distributed/: gpu_worker.py  memory.py  orchestrator.py
src/tide/emissions/: gaussian.py  zero_inflated_beta.py
src/tide/hmm/: baum_welch.py  forward_backward.py  mstep_transitions.py  mstep_zib.py  viterbi.py
src/tide/io/: assemble.py  prechunk.py  reader.py  summary.py  writer.py
src/tide/transitions/: covariates.py  dynamic.py  fit_weights.py  static.py
tests/: conftest.py  test_baum_welch.py  test_covariates.py  test_forward_backward.py  test_integration.py  test_viterbi.py  test_zib_emission.py
