[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tide"
version = "0.1.0"
description = "Tree Inference for Dryland Ecosystems — 6-state ZIB-HMM for dryland tree cover dynamics"
requires-python = ">=3.10"
dependencies = [
    "jax[cuda12]>=0.4.30",
    "jaxlib>=0.4.30",
    "jaxopt>=0.8",
    "numpy>=1.24",
    "rasterio>=1.3",
    "dask[distributed]>=2024.1",
    "click>=8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-xdist",
]
monitoring = [
    "nvidia-ml-py>=12.0",  # GPU utilization stats in pipeline logs
]

[project.scripts]
tide = "tide.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/tide"]

[tool.pytest.ini_options]
testpaths = ["tests"]
